--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -7,12 +7,19 @@
 
 
 .blueBox {
-    background-color: rgb(32, 32, 64);
-    color: white;
+    
+    /* background-color: rgb(32, 32, 64); */
+    /* background-image: linear-gradient(to right, #FF0C81, #ec167d); */
+    color: black;
     width: 100%;
     height:490px;
     margin-bottom: 70px;
+    text-align: center;
     
+}
+
+.blueBox span {
+    color:#FF0C81;
 }
 
 .blueBox h1 {
