--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -2,11 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 0 20px;
     height: 70px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -14,51 +15,51 @@ nav {
     width: 100%;
     font-family: "Roboto", serif;
     z-index: 1000;
+
 }
+
 
 .flexBar {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
 }
 
-.navLeft {
-    display: flex;
-    align-items: center;
-}
 
 .logo img {
     margin-left: 70px;
-    width: 80px;
-    margin-right: 10px;
+    width:80px;
+    margin-right: 60px;
 }
+
 
 .searchBox {
     display: flex;
     align-items: center;
-    border: 1px solid #e5e5e5;
+    border: 2px solid #e5e5e5;
     border-radius: 20px;
     padding: 5px;
-    width: 250px;
-    height: 25px;
-    margin-right: 10px;
+    width:250px;
+    height:25px
+
 }
 
 .searchBox input {
     border: none;
-    padding-right: 30px;
+    padding-right: 60px;
     outline: none;
     color: gray;
     font-family: "Roboto", serif;
     font-size: 14px;
-    width: calc(100% - 20px);
 }
 
+
+
 .searchBox img {
-    width: 18px;
+    width:18px;
     cursor: pointer;
-    margin-left: 5px;
 }
+
 
 .navRight {
     display: flex;
@@ -71,41 +72,48 @@ nav {
 }
 
 .navItem {
-    margin: 0 10px;
-    padding: 5px;
+    margin-left: 55px;
     cursor: pointer;
-    color: rgb(12, 12, 12);
+    color:rgb(12, 12, 12);
     border-radius: 15px;
-    transition: transform 0.3s ease, color 0.3s ease;
+    transition: transform 0.3s ease, color 0.3s ease; /* Smooth transition */
+
 }
+
 
 .navItem:hover {
-    transform: translateY(-2px);
-    color: #FF0C81;
+    transform: translateY(-2px); /* Lift upward */
+    color:#FF0C81;
 }
 
+
 .navEnd {
-    display: flex;
-    align-items: center;
+    margin-left: 100px;
+}
+
+.loginBox {
+    border-radius: 10px;
 }
 
 .loginBox {
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
-    border: none;
+    cursor:pointer;
+    border: 2px solid #e5e5e5;
     border-radius: 10px;
-    margin: 0 5px;
-    width: 100px;
-    height: 35px;
+    margin-left: 20px;
+    width:100px;
+    height:35px;
+    border: none;
 }
+
+
 
 .signIn {
     background-color: #e3e3e3;
-    color: black;
-    border: none;
-    transition: 0.3s all;
+    color:black;
+    border: 1px solid #2c2c2c;
 }
 
 .Register {
