--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -11,15 +11,13 @@
     font-family: "Roboto", serif;
 }
 
+
 .blueBox {
-    /* background-color: rgb(32, 32, 64); */
-    /* background-image: linear-gradient(to right, #FF0C81, #ec167d); */
-    color: black;
+    background-color: rgb(32, 32, 64);
+    color: white;
     width: 100%;
-    height: 490px;
+    height:490px;
     margin-bottom: 70px;
-    text-align: center;
-}
 
 .blueBox span {
     color: #FF0C81;
@@ -27,26 +25,26 @@
 
 .blueBox h1 {
     font-size: 28px;
-    padding: 20px;
-    margin: 10px;
+    padding:20px;
+    margin:10px;
     font-weight: 800;
+
 }
 
 .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid */
-    gap: 20px; /* Consistent gap */
-    width: 90%; /* Occupy most of the screen */
-    max-width: 1200px; /* Set a maximum width */
-    margin: 20px auto; /* Center the grid */
-    height: auto; /* Allow height to adjust */
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 50px;
+    column-gap: 100px;
+    height:400px;
 }
 
 .topLeft {
     position: relative;
-    bottom: 30px;
-    font-size: 22px;
-    margin: 30px;
+    bottom:30px;
+    font-size:22px;
+    margin:30px;
     text-align: center;
 }
 
@@ -60,7 +58,7 @@
     background-color: black;
     color: white;
     height: 200px;
-    padding: 0;
+    padding:0;
     margin: 0;
 }
 
