--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,48 +1,85 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .flexContainer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    font-family: "Roboto", serif;
 }
-
 
 .blueBox {
     background-color: rgb(32, 32, 64);
     color: white;
     width: 100%;
-    height:490px;
+    height: 490px;
     margin-bottom: 70px;
-    
+}
+
+.blueBox span {
+    color: #FF0C81;
 }
 
 .blueBox h1 {
     font-size: 28px;
-    padding:20px;
-    margin:10px;
+    padding: 20px;
+    margin: 10px;
     font-weight: 800;
-
 }
 
 .gridContainer {
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 50px;
     column-gap: 100px;
-    height:400px;
+    height: 400px;
 }
 
 .topLeft {
     position: relative;
-    bottom:30px;
-    font-size:22px;
-    margin:30px;
+    bottom: 30px;
+    font-size: 22px;
+    margin: 30px;
     text-align: center;
+}
+
+.image img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
 }
 
 .footer {
     background-color: black;
     color: white;
     height: 200px;
-    padding:0;
+    padding: 0;
     margin: 0;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .blueBox {
+        height: auto; 
+        margin-bottom: 30px;
+    }
+
+    .blueBox h1 {
+        font-size: 24px;
+        padding: 15px;
+    }
+
+    .gridContainer {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        width: 95%;
+        gap: 15px;
+    }
+
+    .topLeft {
+        font-size: 18px;
+        margin: 20px 10px;
+        bottom: 10px;
+    }
 }
