--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -16,8 +16,9 @@
     background-color: rgb(32, 32, 64);
     color: white;
     width: 100%;
-    height:490px;
+    height: 490px;
     margin-bottom: 70px;
+}
 
 .blueBox span {
     color: #FF0C81;
@@ -25,26 +26,25 @@
 
 .blueBox h1 {
     font-size: 28px;
-    padding:20px;
-    margin:10px;
+    padding: 20px;
+    margin: 10px;
     font-weight: 800;
-
 }
 
 .gridContainer {
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 50px;
     column-gap: 100px;
-    height:400px;
+    height: 400px;
 }
 
 .topLeft {
     position: relative;
-    bottom:30px;
-    font-size:22px;
-    margin:30px;
+    bottom: 30px;
+    font-size: 22px;
+    margin: 30px;
     text-align: center;
 }
 
@@ -58,7 +58,7 @@
     background-color: black;
     color: white;
     height: 200px;
-    padding:0;
+    padding: 0;
     margin: 0;
 }
 
@@ -70,19 +70,19 @@
     }
 
     .blueBox h1 {
-        font-size: 24px; /* Slightly smaller font */
+        font-size: 24px;
         padding: 15px;
     }
 
     .gridContainer {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust minmax for smaller screens */
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         width: 95%;
-        gap: 15px; /* Reduced gap */
+        gap: 15px;
     }
 
     .topLeft {
-        font-size: 18px; /* Slightly smaller font */
-        margin: 20px 10px; /* Adjusted margin */
-        bottom: 10px; /* Adjusted bottom position */
+        font-size: 18px;
+        margin: 20px 10px;
+        bottom: 10px;
     }
 }
