--- a/src/Components/BusinessCard/BusinessCard.css
+++ b/src/Components/BusinessCard/BusinessCard.css
@@ -1,5 +1,4 @@
 .businessCard {
-    border:1px solid lightgray;
     height:150px;
     width:290px;
     border-radius: 10px;
@@ -8,8 +7,10 @@
     display:flex;
     flex-direction: column;
     margin:0;
-    padding: 0;
+    padding: 15px;
     flex-grow:1;
+    background-color: rgb(244, 244, 244);
+
 }
 
 .businessCard .flexContainer {
@@ -29,8 +30,8 @@
 }
 
 .businessCard h1 {
-    font-size: 20px;
-    font-weight: 800;
+    font-size: 25px;
+    font-weight: 500;
     margin-top:12px;
     margin-bottom: 0px;
     padding-bottom:0px;
