--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,15 @@
+.Homepage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+
+
+
+}
+
+
 
 .flexContainer {
     display: flex;
@@ -7,14 +19,15 @@
 
 
 .blueBox {
-    
-    /* background-color: rgb(32, 32, 64); */
+    background-color: white;
     /* background-image: linear-gradient(to right, #FF0C81, #ec167d); */
     color: black;
-    width: 100%;
+    width: 80%;
     height:490px;
+    margin-top: 100px;
     margin-bottom: 70px;
     text-align: center;
+    border-radius: 10px
     
 }
 
@@ -54,3 +67,5 @@
     padding:0;
     margin: 0;
 }
+
+
