--- a/src/Components/FeedItem/FeedItem.css
+++ b/src/Components/FeedItem/FeedItem.css
@@ -8,7 +8,12 @@
     justify-content: space-between;
     align-items: center;
     background-color: white;
+    transition: all 0.1s;
 
+}
+
+.FeedItem:hover {
+    background-color: rgb(248, 248, 248);
 }
 
 .FeedItem * {
