--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -12,8 +12,15 @@ nav {
     width: 100%;
     font-family: "Roboto", serif;
     z-index: 1000;
-    background-color: white;
+    /* background-color: white; */
     /* background-color: #7b67fb; */
+    /* background: linear-gradient(to right, #7b67fb, #34ace0); */
+    /* background: linear-gradient(to right, #ff69b4, #ffc0cb);
+    background: linear-gradient(to right, #ffb6c1, #ffe6f0); */
+    background-color: rgb(250, 250, 250);
+
+
+
 }
 
 
@@ -44,11 +51,16 @@ nav {
 
 }
 
+.searchBox:focus-within {
+    border: 2px solid rgb(101, 101, 101); /* Soft pink */
+
+}
+
 .searchBox input {
     border: none;
     padding-right: 60px;
     outline: none;
-    color: gray;
+    color: BLACK;
     font-family: "Roboto", serif;
     font-size: 14px;
     background-color: transparent;
@@ -71,6 +83,8 @@ nav {
     cursor: pointer;
     color:rgb(12, 12, 12);
     border-radius: 15px;
+    font-size: 15px;
+    font-weight: 500;
     transition: transform 0.3s ease, color 0.3s ease; /* Smooth transition */
 
 }
@@ -78,7 +92,7 @@ nav {
 
 .navItem:hover {
     transform: translateY(-2px); /* Lift upward */
-    color:#FF0C81;
+    color:rgb(241, 189, 227);
 }
 
 
@@ -139,8 +153,18 @@ nav {
     display: flex;
     align-items: center;
     cursor: pointer;
+    border-radius: 50%;
+    transition: 0.3s ease;
 
     /* Remove margin-left since we’re anchoring on the right */
+  }
+
+
+  .profile.top {
+    padding: 5px;
+  }
+  .profile.top:hover {
+    background-color: #f5f5f5;
   }
   
 
