--- a/src/Pages/Feed/Feed.css
+++ b/src/Pages/Feed/Feed.css
@@ -8,6 +8,7 @@
     padding-top: 30px;        /* Optional: adds space at the top if needed */
     margin:0;
     padding-bottom:0;
+    /* background-color: rgb(250, 250, 251); */
 
   }
   
@@ -37,7 +38,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap:10px;
+    gap:25px;
 }
 
 .tag {
