--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,12 +1,26 @@
 .Homepage {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     background-color: white;
+    width:100%;
+    height: 600px;
+    margin: 0;
+    padding: 0;
+}
 
+.Homepage span {
+    background: linear-gradient(to right, rgb(223, 82, 201), blue);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    /* For browsers that support the standard property */
+    background-clip: text;
+    color: transparent;
+      
+}
 
-
+.card_list {
+    gap:20px;
 }
 
 
@@ -17,9 +31,13 @@
     align-items: center;
 }
 
+.column {
+    flex-direction: column;
+}
+
 
 .blueBox {
-    background-color: white;
+    background-color: darkblue;
     /* background-image: linear-gradient(to right, #FF0C81, #ec167d); */
     color: black;
     width: 80%;
@@ -27,7 +45,7 @@
     margin-top: 100px;
     margin-bottom: 70px;
     text-align: center;
-    border-radius: 10px
+    border-radius: 10px;
     
 }
 
