--- a/src/pages/BusinessProfileCreation/BusinessProfileCreation.css
+++ b/src/pages/BusinessProfileCreation/BusinessProfileCreation.css
@@ -3,7 +3,7 @@
     height: 39px;
     width: 200px;
     border: 1px solid #E6E6E6;
-    border-radius: 5px;
+    border-radius: 10px;
     margin-top: 5px; /* Adds space between label and input */
     text-align: left; /* Ensures placeholder text aligns left */
 }
@@ -39,3 +39,48 @@
     /* Align label and input vertically */
     justify-content: flex-start; /* Align content to the left */
 }
+
+.tag {
+    background-color: black;
+    color:white;
+    border-radius: 10px;
+    padding: 5px;
+    margin-left:7px;
+}
+
+.upload-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .upload-button {
+    background-color: #9fa2a5;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-weight: bold;
+    display: inline-block;
+    text-align: center;
+  }
+  
+  .hidden-input {
+    display: none;
+  }
+  
+  .image-preview {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 10px;
+  }
+  
+  .preview-image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 8px;
+    border: 2px solid #ddd;
+  }
