--- a/src/pages/ProfileCreation/ProfileCreation.css
+++ b/src/pages/ProfileCreation/ProfileCreation.css
@@ -39,3 +39,11 @@
     /* Align label and input vertically */
     justify-content: flex-start; /* Align content to the left */
 }
+
+.tag {
+    background-color: black;
+    color:white;
+    border-radius: 10px;
+    padding: 5px;
+    margin-left:7px;
+}
