--- a/src/pages/BusinessProfileCreation/BusinessProfileCreation.css
+++ b/src/pages/BusinessProfileCreation/BusinessProfileCreation.css
@@ -56,14 +56,15 @@
   }
   
   .upload-button {
-    background-color: #9fa2a5;
+    background-color: #000000;
     color: white;
     padding: 10px 20px;
     border-radius: 50px;
     cursor: pointer;
     font-weight: bold;
-    display: inline-block;
+    display: flex;
     text-align: center;
+    width: 15%;
   }
   
   .hidden-input {
